optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_destructure_args_colon_props3.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";
export default component$((props) => {
	const { test, ...rest } = props;
	const test = useSignal(rest['bind:value']);
	return (
		<>
		{test.value}
		</>
	);
});

============================= ./destructure_args_colon_props3.tsx_component_0RtHRgkBnzw.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const component_0RtHRgkBnzw = (props) => {
	const { test, ...rest } = props;
	const test = useSignal(rest["bind:value"]);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, _wrapProp(test), 1, null);
};


None
/*
{
  "origin": "destructure_args_colon_props3.tsx",
  "name": "component_0RtHRgkBnzw",
  "entry": null,
  "displayName": "destructure_args_colon_props3.tsx_component",
  "hash": "0RtHRgkBnzw",
  "canonicalFilename": "destructure_args_colon_props3.tsx_component_0RtHRgkBnzw",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component_0RtHRgkBnzw",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= destructure_args_colon_props3.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
export default componentQrl(qrl(() => import("./destructure_args_colon_props3.tsx_component_0RtHRgkBnzw.js"), "component_0RtHRgkBnzw"));


None
== DIAGNOSTICS ==

[]
