optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_destructure_args_inline_cmp_block_stmt2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

export default (props: { data: any }) => {
  const { data } = props;
  return (
    <div
      data-is-active={data.selectedOutputDetail === 'options'}
      onClick$={() => {
        data.selectedOutputDetail = 'options';
      }}
    />
  );
};

============================= destructure_args_inline_cmp_block_stmt2.tsx ==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_div_onClick = () => import("./destructure_args_inline_cmp_block_stmt2.tsx.js");
export default (props) => {
	const { data } = props;
	return /*#__PURE__*/ _jsxSorted("div", {
		data-is-active: data.selectedOutputDetail === "options",
		on:click: qrl(i_div_onClick, "div_onClick")
	}, null, null, 3, null);
};


None
== DIAGNOSTICS ==

[]
