optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_10.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';
const Header = $((decl1, {decl2}, [decl3]) => {

	const hola = ident1.no;
	ident2;
	const a = ident1 + ident3;
	const b = ident1 + ident3;
	ident4(ident5, [ident6], {ident7}, {key: ident8});
	class Some {
		prop = ident9;
		method() {
			return ident10;
		}
	}

	return (
		<div onClick={(ident11) => ident11 + ident12} required={false}/>
	)
});

============================= ./project/test.tsx_Header_WlR3xnI6u38.js (ENTRY POINT)==

export const Header_WlR3xnI6u38 = (decl1, { decl2 }, [decl3]) => {
	const hola = ident1.no;
	ident2;
	const a = ident1 + ident3;
	const b = ident1 + ident3;
	ident4(ident5, [ident6], { ident7 }, { key: ident8 });
	return <div onClick={(ident11) => ident11 + ident12} required={false} />;
};


None
/*
{
  "origin": "project/test.tsx",
  "name": "Header_WlR3xnI6u38",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "WlR3xnI6u38",
  "canonicalFilename": "test.tsx_Header_WlR3xnI6u38",
  "path": "./project",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Header_WlR3xnI6u38",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= project/test.tsx ==

import { qrl } from "@qwik.dev/core";
qrl(() => import("./test.tsx_Header_WlR3xnI6u38.js"), "Header_WlR3xnI6u38");


None
== DIAGNOSTICS ==

[]
